[package]
name = "chain-blocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.0"
futures = "0.3.21"
pin-project = "1.0.11"
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = { version ="0.7.3", features = ["io", "compat"] }
futures-mockstream = "0.1.2"

